...
                    app:factMainCategoryOrUncategorized="@{fact}"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    />

                <ImageView
                    android:id="@+id/share_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/category_chip"
                    android:src="@drawable/ic_baseline_share"
                    app:tint="?attr/colorPrimary"
...
